# practiceRepo

./: .gitignore
golangProjects/com.go_project/: first.go  go.mod
golangProjects/com.go_project/src/: first.go  go.mod
java/: first.java
javaProjects/: README.md
javaProjects/com.csv_reader/csvfiles/: pom.xml
javaProjects/com.csv_reader/csvfiles/src/main/java/com/csv_reader/: App.java
javaProjects/com.csv_reader/csvfiles/src/test/java/com/csv_reader/: AppTest.java
javaProjects/trial/: pom.xml
javaProjects/trial/src/main/java/com/concurrency/: Main.java
javaProjects/trial/src/main/java/com/concurrency/model/: Account.java  Customer.java
javaProjects/trial/src/main/java/com/concurrency/service/: Transactions.java
javaProjects/trial/src/main/java/com/concurrency/utils/: Tasks.java
pythonProjects/api-reader/: README.md
pythonProjects/api-reader/api-reader/: README.md  pyproject.toml
pythonProjects/api-reader/api-reader/src/api_reader/: __init__.py  main.py  prompts.py  reader.py
shellScripts/: README.md
