[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-reader"
dynamic = ["version"]
description = 'A python app for reading from an api'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["api-reader", "api", "authentication", "env"]
authors = [
  { name = "Pardha Saradhi Sastry Nemani", email = "sastry.nemani1993@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "requests",
  "os",
  "json",
  "flask"
]

[project.urls]
Documentation = "https://github.com/U.N. Owen/api-reader#readme"
Issues = "https://github.com/U.N. Owen/api-reader/issues"
Source = "https://github.com/U.N. Owen/api-reader"

[tool.hatch.version]
path = "src/api_reader/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/api_reader tests}"

[tool.coverage.run]
source_pkgs = ["api_reader", "tests"]
branch = true
parallel = true
omit = [
  "src/api_reader/__about__.py",
]

[tool.coverage.paths]
api_reader = ["src/api_reader", "*/api-reader/src/api_reader"]
tests = ["tests", "*/api-reader/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
